--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -11,3 +11,12 @@ References
   author = {Fong, Christian and Hazlett, Chad and Imai, Kosuke},
   date = {2015}
 }
+
+@book{marx1990,
+ author = {Marx, Karl},
+ title = {Capital : a critique of political economy},
+ publisher = {Penguin Books in association with New Left Review},
+ year = {1990},
+ address = {London New York, N.Y., USA},
+ isbn = {0140445684}
+ }
