--- a/_bibliography/lonely.bib
+++ b/_bibliography/lonely.bib
@@ -1,4 +1,29 @@
 
+@report{wilshaw2015,
+  location = {{London}},
+  title = {The Annual Report of {{Her Majesty}}'s {{Chief Inspector}} of {{Education}}, {{Children}}'s {{Services}} and {{Skills}} 2014/15},
+  timestamp = {2016-04-06T13:57:33Z},
+  langid = {english},
+  institution = {{Ofsted}},
+  type = {Annual {{Report}}},
+  author = {Wilshaw, Michael},
+  date = {2015}
+}
+
+@report{departmentforeducation2016b,
+  location = {{London}},
+  title = {Educational {{Excellence Everywhere}}},
+  url = {https://www.gov.uk/government/publications/educational-excellence-everywhere},
+  abstract = {ISBN: 978-1-4741-3016-5},
+  timestamp = {2017-05-29T19:56:23Z},
+  langid = {english},
+  number = {Cm 9230},
+  institution = {{Department for Education}},
+  type = {Policy {{Paper}}},
+  author = {{Department for Education}},
+  date = {2016}
+}
+
 @unpublished{fong2015,
   title = {Covariate {{Balancing Propensity Score}} for {{General Treatment Regimes}}},
   url = {http://imai.princeton.edu/research/files/CBGPS.pdf},
@@ -13,11 +38,11 @@
   issn = {1469-5847},
   doi = {10.1080/00131881.2017.1339285},
   shorttitle = {Lonely Schools},
-  timestamp = {2017-06-08T10:42:58Z},
+  timestamp = {2017-06-13T21:46:50Z},
   journaltitle = {Educational Research},
   shortjournal = {Educational Research},
   author = {Odell, Evan},
-  year = {2017},
+  date = {2017},
   keywords = {peerReview}
 }
 
@@ -34,3 +59,5 @@
   date = {2017},
   groups = {Blog}
 }
+
+
