updating css for bibliographies

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,14 +1,9 @@
 
----
----
-References
-==========
-
-
 @report{wilshaw2015,
   location = {{London}},
   title = {The Annual Report of {{Her Majesty}}'s {{Chief Inspector}} of {{Education}}, {{Children}}'s {{Services}} and {{Skills}} 2014/15},
-  timestamp = {2016-04-06T13:57:33Z},
+  url = {https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/483347/Ofsted_annual_report_education_and_skills.pdf},
+  timestamp = {2017-06-15T12:48:38Z},
   langid = {english},
   institution = {{Ofsted}},
   type = {Annual {{Report}}},
@@ -20,8 +15,7 @@ References
   location = {{London}},
   title = {Educational {{Excellence Everywhere}}},
   url = {https://www.gov.uk/government/publications/educational-excellence-everywhere},
-  abstract = {ISBN: 978-1-4741-3016-5},
-  timestamp = {2017-05-29T19:56:23Z},
+  timestamp = {2017-06-15T12:43:45Z},
   langid = {english},
   number = {Cm 9230},
   institution = {{Department for Education}},
@@ -42,9 +36,10 @@ References
 @article{odell2017g,
   title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
   issn = {1469-5847},
+  url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
   doi = {10.1080/00131881.2017.1339285},
   shorttitle = {Lonely Schools},
-  timestamp = {2017-06-13T21:46:50Z},
+  timestamp = {2017-06-15T12:49:37Z},
   journaltitle = {Educational Research},
   shortjournal = {Educational Research},
   author = {Odell, Evan},
@@ -65,3 +60,5 @@ References
   date = {2017},
   groups = {Blog}
 }
+
+
