--- a/_bibliography/cv.bib
+++ b/_bibliography/cv.bib
@@ -1,15 +1,16 @@
 
 @software{odell2017b,
   title = {Hansard: {{Accessing Westminster Parliament Data}}},
-  isbn = {10.5281/zenodo.802799},
+  isbn = {10.5281/zenodo.809411},
   url = {http://docs.evanodell.com/hansard},
   shorttitle = {Hansard},
-  abstract = {R package version 0.4.2},
-  version = {0.4.6},
-  timestamp = {2017-06-15T15:20:30Z},
+  abstract = {R package version 0.4.7},
+  version = {0.4.7},
+  timestamp = {2017-06-15T17:25:51Z},
   author = {Odell, Evan},
   date = {2017},
-  keywords = {software}
+  keywords = {software},
+  doi = {10.5281/zenodo.809411}
 }
 
 @report{theobald2015,
@@ -38,58 +39,62 @@
   keywords = {other}
 }
 
-@report{odell2016,
+@unpublished{odell2016,
   location = {{London}},
   title = {The Role of Worker Representatives and Disability Advocacy Organisations in Supporting Disabled Employees into the Labour Market and in Employment and Improving Workplace Well-Being},
   abstract = {Panel apperance with Chris Holmes, Huma Munshi and Natasha Hirst, convened by Debbie Foster},
-  timestamp = {2017-06-15T15:19:34Z},
-  institution = {{Closing Disability Gaps at Work}},
-  author = {Odell, Evan},
+  timestamp = {2017-06-15T18:09:19Z},
+  eventtitle = {Closing {{Disability Gaps}} at {{Work}}},
+  author = {Odell, Evan and Holmes, Chris and Huma, Munshi and Hirst, Nathasha and Foster, Debbie},
   date = {2016-12-13},
   keywords = {appearances}
 }
 
 @software{odell2017c,
   title = {Mnis: {{Easy Downloading Capabilities}} for the {{Members}}' {{Name Information Service}}},
-  isbn = {10.5281/zenodo.546447},
+  isbn = {10.5281/zenodo.802798},
   url = {http://docs.evanodell.com/mnis},
   shorttitle = {Mnis},
   abstract = {R package version 0.2.2},
   version = {0.2.6},
-  timestamp = {2017-06-15T15:20:36Z},
+  timestamp = {2017-06-15T17:25:46Z},
   author = {Odell, Evan},
   date = {2017},
-  keywords = {software}
+  keywords = {software},
+  doi = {10.5281/zenodo.802798}
 }
 
-@report{odell2017,
+@unpublished{odell2017,
   location = {{London}},
   title = {Priorities for Increasing Disabled Student Participation in {{Higher Education}}},
   abstract = {Panel Appearance with Joanne Cooke and Graeme Atherton, convened by Lisa Cameron},
-  timestamp = {2017-06-15T14:54:02Z},
-  institution = {{Westminster Higher Education Forum Keynote Seminar: Disabled students at university - facilities, support services and the impact of funding changes}},
-  author = {Odell, Evan},
+  timestamp = {2017-06-15T18:09:59Z},
+  eventtitle = {Westminster {{Higher Education Forum Keynote Seminar}}: {{Disabled}} Students at University - Facilities, Support Services and the Impact of Funding Changes},
+  author = {Odell, Evan and Cooke, Joanne and Atherton, Graeme},
+  editora = {Cameron, Lisa},
+  editoratype = {collaborator},
   date = {2017-01-26},
   keywords = {appearances}
 }
 
 @software{odell2017d,
   title = {Parlitools: {{Tools}} for {{Analysing UK Politics}}},
-  isbn = {10.5281/zenodo.802938},
+  isbn = {10.5281/zenodo.809414},
   url = {http://docs.evanodell.com/parlitools},
   shorttitle = {Parlitools},
-  version = {0.0.4},
-  timestamp = {2017-06-15T15:20:42Z},
+  version = {0.0.5},
+  timestamp = {2017-06-15T17:25:39Z},
   author = {Odell, Evan},
   date = {2017},
-  keywords = {software}
+  keywords = {software},
+  doi = {10.5281/zenodo.809414}
 }
 
-@misc{odell2017a,
+@article{odell2017a,
   title = {Hansard {{Speeches}} and {{Sentiment V2}}.0 [Dataset]},
   url = {https://zenodo.org/record/579712},
-  timestamp = {2017-06-15T13:17:40Z},
-  publisher = {{Zenodo}},
+  doi = {10.5281/zenodo.579712},
+  timestamp = {2017-06-15T17:30:07Z},
   author = {Odell, Evan},
   date = {2017-05-14},
   keywords = {dataset}
@@ -109,11 +114,11 @@
   keywords = {peerReview}
 }
 
-@report{odell2017e,
+@unpublished{odell2017e,
   location = {{London}},
   title = {Guest {{Lecturer}}},
-  timestamp = {2017-06-15T14:51:54Z},
-  institution = {{Disability in Interdisciplinary Studies in Global Health and Disability}},
+  timestamp = {2017-06-15T18:10:09Z},
+  eventtitle = {Disability in {{Interdisciplinary Studies}} in {{Global Health}} and {{Disability}}},
   author = {Odell, Evan},
   date = {2017-05-12},
   keywords = {appearances}
