--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -24,6 +24,24 @@
   date = {2016}
 }
 
+@article{wilson2006,
+  title = {'{{What}} Gets Measured Gets Done': Headteachers’ Responses to the {{English Secondary School Performance Management System}}},
+  volume = {27},
+  issn = {0144-2872, 1470-1006},
+  url = {http://www.tandfonline.com/doi/abs/10.1080/01442870600637995},
+  doi = {10.1080/01442870600637995},
+  shorttitle = {“{{WHAT GETS MEASURED GETS DONE}}”},
+  timestamp = {2015-01-12T12:27:10Z},
+  langid = {english},
+  number = {2},
+  journaltitle = {Policy Studies},
+  author = {Wilson, Deborah and Croxson, Bronwyn and Atkinson, Adele},
+  urldate = {2015-01-12},
+  date = {2006-06},
+  pages = {153--171},
+  keywords = {Education Policy Option}
+}
+
 @unpublished{fong2015,
   title = {Covariate {{Balancing Propensity Score}} for {{General Treatment Regimes}}},
   url = {http://imai.princeton.edu/research/files/CBGPS.pdf},
