update cv style

--- a/_bibliography/cv.bib
+++ b/_bibliography/cv.bib
@@ -38,13 +38,13 @@
   keywords = {other}
 }
 
-@unpublished{odell2016,
+@unpublished{holmes2016,
   location = {{London}},
   title = {The Role of Worker Representatives and Disability Advocacy Organisations in Supporting Disabled Employees into the Labour Market and in Employment and Improving Workplace Well-Being},
-  abstract = {Panel apperance with Chris Holmes, Huma Munshi and Natasha Hirst, convened by Debbie Foster},
-  timestamp = {2017-06-15T18:09:19Z},
+  abstract = {Panel appearance with Chris Holmes, Huma Munshi and Natasha Hirst, convened by Debbie Foster},
+  timestamp = {2017-06-20T18:46:06Z},
   eventtitle = {Closing {{Disability Gaps}} at {{Work}}},
-  author = {Odell, Evan and Holmes, Chris and Huma, Munshi and Hirst, Nathasha and Foster, Debbie},
+  author = {Holmes, Chris and Odell, Evan and Huma, Munshi and Hirst, Nathasha and Foster, Debbie},
   date = {2016-12-13},
   keywords = {appearances}
 }
