--- a/_bibliography/cv.bib
+++ b/_bibliography/cv.bib
@@ -89,9 +89,9 @@
 
 @article{odell2017a,
   title = {Hansard {{Speeches}} and {{Sentiment V2}}.0 [Dataset]},
-  url = {https://zenodo.org/record/579712},
+  url = {https://evanodell.com/datasets/hansard-data/},
   doi = {10.5281/zenodo.579712},
-  timestamp = {2017-06-15T17:30:07Z},
+  timestamp = {2017-06-20T19:55:04Z},
   author = {Odell, Evan},
   date = {2017-05-14},
   keywords = {dataset}
