hansard docs for v2.1

--- a/_bibliography/hansard-data.bib
+++ b/_bibliography/hansard-data.bib
@@ -75,4 +75,18 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{rheault2016,
+  title = {Measuring {{Emotion}} in {{Parliamentary Debates}} with {{Automated Textual Analysis}}},
+  volume = {11},
+  url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0168843},
+  timestamp = {2017-06-25T13:01:55Z},
+  number = {12},
+  journaltitle = {PloS one},
+  author = {Rheault, Ludovic and Beelen, Kaspar and Cochrane, Christopher and Hirst, Graeme},
+  urldate = {2017-06-25},
+  date = {2016},
+  pages = {e0168843},
+  file = {Rheault et al. - 2016 - Measuring Emotion in Parliamentary Debates with Au.pdf:/Users/evanodell/Library/Application Support/Zotero/Profiles/52zj7ud5.default/zotero/storage/BFJMQACQ/Rheault et al. - 2016 - Measuring Emotion in Parliamentary Debates with Au.pdf:application/pdf}
+}
+
 
