--- a/projects/datasets/hansard-data/archive/v2.md
+++ b/projects/datasets/hansard-data/archive/v2.md
@@ -13,7 +13,7 @@ Note that these files are UTF-8 encoded, and when I've opened them on a Windows 
 
 The speeches have been classified for sentiment using a total of four libraries from the R package [`lexicon`](https://cran.r-project.org/package=lexicon) by Tyler Rinker, and one from the [`syuzhet`](https://cran.r-project.org/package=syuzhet) package by Michael Jockers. All classification has used the method in Tyler Rinker's [`sentimentr`](https://cran.r-project.org/package=sentimentr) package. The libraries are:
 
-1. The [AFINN](http://www2.imm.dtu.dk/pubdb/views/publication_details.php?id=6010) library by Finn Årup Nielsen, labelled `afinn`. The AFINN library was accessed through Tyler Rinker's [`syuzhet`](https://cran.r-project.org/package=syuzhet) package.
+1. The [AFINN](http://www2.imm.dtu.dk/pubdb/views/publication_details.php?id=6010) library by Finn Årup Nielsen, labelled `afinn`. The AFINN library was accessed through Matthew Jockers's [`syuzhet`](https://cran.r-project.org/package=syuzhet) package.
 
 2. A variant of the [syuzhet](https://cran.r-project.org/package=syuzhet) library by Matthew Jockers, included in the [`lexicon`](https://cran.r-project.org/package=lexicon) package, labelled `jockers`.
 
