--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -47,8 +47,7 @@
   url = {http://imai.princeton.edu/research/files/CBGPS.pdf},
   timestamp = {2017-05-29T19:56:35Z},
   author = {Fong, Christian and Hazlett, Chad and Imai, Kosuke},
-  date = {2015},
-  groups = {Blog}
+  date = {2015}
 }
 
 @article{odell2017g,
