update hansard docs for V2.2

--- a/_bibliography/hansard-data.bib
+++ b/_bibliography/hansard-data.bib
@@ -85,8 +85,7 @@
   author = {Rheault, Ludovic and Beelen, Kaspar and Cochrane, Christopher and Hirst, Graeme},
   urldate = {2017-06-25},
   date = {2016},
-  pages = {e0168843},
-  file = {Rheault et al. - 2016 - Measuring Emotion in Parliamentary Debates with Au.pdf:/Users/evanodell/Library/Application Support/Zotero/Profiles/52zj7ud5.default/zotero/storage/BFJMQACQ/Rheault et al. - 2016 - Measuring Emotion in Parliamentary Debates with Au.pdf:application/pdf}
+  pages = {e0168843}
 }
 
 
