hansard data release

--- a/_bibliography/cv.bib
+++ b/_bibliography/cv.bib
@@ -1,5 +1,5 @@
 
-@software{odell2017b,
+@software{odell2017a,
   title = {Hansard: {{Accessing Westminster Parliament Data}}},
   isbn = {10.5281/zenodo.591264},
   url = {http://docs.evanodell.com/hansard},
@@ -49,7 +49,7 @@
   keywords = {appearances}
 }
 
-@software{odell2017c,
+@software{odell2017b,
   title = {Mnis: {{Easy Downloading Capabilities}} for the {{Members}}' {{Name Information Service}}},
   isbn = {10.5281/zenodo.591287},
   url = {http://docs.evanodell.com/mnis},
@@ -62,7 +62,7 @@
   doi = {10.5281/zenodo.591287}
 }
 
-@unpublished{odell2017,
+@unpublished{odell2017c,
   location = {{London}},
   title = {Priorities for Increasing Disabled Student Participation in {{Higher Education}}},
   abstract = {Panel Appearance with Joanne Cooke and Graeme Atherton, convened by Lisa Cameron},
@@ -87,7 +87,7 @@
   doi = {10.5281/zenodo.591586}
 }
 
-@article{odell2017a,
+@article{odell2017e,
   title = {Hansard {{Speeches}} and {{Sentiment V2}}.2 [Dataset]},
   url = {https://evanodell.com/datasets/hansard-data/},
   doi = {10.5281/zenodo.832176},
@@ -97,7 +97,7 @@
   keywords = {dataset}
 }
 
-@article{odell2017g,
+@article{odell2017,
   title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
   issn = {1469-5847},
   url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
@@ -111,7 +111,7 @@
   keywords = {peerReview}
 }
 
-@unpublished{odell2017e,
+@unpublished{odell2017f,
   location = {{London}},
   title = {Guest {{Lecturer}}},
   timestamp = {2017-06-15T18:10:09Z},
