--- a/_bibliography/isolated.bib
+++ b/_bibliography/isolated.bib
@@ -11,7 +11,7 @@
   date = {2015}
 }
 
-@report{departmentforeducation2016b,
+@report{departmentforeducation2016,
   location = {{London}},
   title = {Educational {{Excellence Everywhere}}},
   url = {https://www.gov.uk/government/publications/educational-excellence-everywhere},
@@ -50,7 +50,7 @@
   date = {2015}
 }
 
-@article{odell2017g,
+@article{odell2017,
   title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
   issn = {1469-5847},
   url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
