--- a/_bibliography/cv.bib
+++ b/_bibliography/cv.bib
@@ -88,26 +88,29 @@
 }
 
 @article{odell2017e,
-  title = {Hansard {{Speeches}} and {{Sentiment V2}}.2 [Dataset]},
+  title = {Hansard {{Speeches}} and {{Sentiment V2}}.4 [Dataset]},
   url = {https://evanodell.com/datasets/hansard-data/},
-  doi = {10.5281/zenodo.832176},
-  timestamp = {2017-07-19T21:55:22Z},
+  doi = {10.5281/zenodo.838020},
+  timestamp = {2017-08-04T10:43:18Z},
   author = {Odell, Evan},
-  date = {2017-07-19},
+  date = {2017-08-04},
   keywords = {dataset}
 }
 
 @article{odell2017,
   title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
+  volume = {59},
   issn = {1469-5847},
   url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
   doi = {10.1080/00131881.2017.1339285},
   shorttitle = {Lonely Schools},
-  timestamp = {2017-06-15T12:49:37Z},
+  timestamp = {2017-08-03T13:42:54Z},
+  number = {3},
   journaltitle = {Educational Research},
   shortjournal = {Educational Research},
   author = {Odell, Evan},
   date = {2017},
+  pages = {257--272},
   keywords = {peerReview}
 }
 
