--- a/_bibliography/isolated.bib
+++ b/_bibliography/isolated.bib
@@ -52,15 +52,18 @@
 
 @article{odell2017,
   title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
+  volume = {59},
   issn = {1469-5847},
   url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
   doi = {10.1080/00131881.2017.1339285},
   shorttitle = {Lonely Schools},
-  timestamp = {2017-06-15T12:49:37Z},
+  timestamp = {2017-08-03T13:42:54Z},
+  number = {3},
   journaltitle = {Educational Research},
   shortjournal = {Educational Research},
   author = {Odell, Evan},
   date = {2017},
+  pages = {257--272},
   keywords = {peerReview}
 }
 
