--- a/_bibliography/isolated.bib
+++ b/_bibliography/isolated.bib
@@ -50,14 +50,15 @@
   date = {2015}
 }
 
-@article{odell2017,
+@article{odell2017f,
   title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
   volume = {59},
+  rights = {All rights reserved},
   issn = {1469-5847},
   url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
   doi = {10.1080/00131881.2017.1339285},
   shorttitle = {Lonely Schools},
-  timestamp = {2017-08-03T13:42:54Z},
+  timestamp = {2017-09-09T14:42:20Z},
   number = {3},
   journaltitle = {Educational Research},
   shortjournal = {Educational Research},
