--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,83 +1,50 @@
 
-@report{wilshaw2015,
-  location = {{London}},
-  title = {The Annual Report of {{Her Majesty}}'s {{Chief Inspector}} of {{Education}}, {{Children}}'s {{Services}} and {{Skills}} 2014/15},
-  url = {https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/483347/Ofsted_annual_report_education_and_skills.pdf},
-  timestamp = {2017-06-15T12:48:38Z},
+@article{roulstone2011,
+  title = {Between Hate and Vulnerability: Unpacking the {{British}} Criminal Justice System?S Construction of Disablist Hate Crime},
+  volume = {26},
+  issn = {0968-7599, 1360-0508},
+  url = {http://www.tandfonline.com/doi/abs/10.1080/09687599.2011.560418},
+  doi = {10.1080/09687599.2011.560418},
+  shorttitle = {Between Hate and Vulnerability},
+  timestamp = {2017-10-02T08:58:39Z},
   langid = {english},
-  institution = {{Ofsted}},
-  type = {Annual {{Report}}},
-  author = {Wilshaw, Michael},
-  date = {2015}
-}
-
-@report{departmentforeducation2016,
-  location = {{London}},
-  title = {Educational {{Excellence Everywhere}}},
-  url = {https://www.gov.uk/government/publications/educational-excellence-everywhere},
-  timestamp = {2017-06-15T12:43:45Z},
-  langid = {english},
-  number = {Cm 9230},
-  institution = {{Department for Education}},
-  type = {Policy {{Paper}}},
-  author = {{Department for Education}},
-  date = {2016}
-}
-
-@article{wilson2006,
-  title = {'{{What}} Gets Measured Gets Done': Headteachers’ Responses to the {{English Secondary School Performance Management System}}},
-  volume = {27},
-  issn = {0144-2872, 1470-1006},
-  url = {http://www.tandfonline.com/doi/abs/10.1080/01442870600637995},
-  doi = {10.1080/01442870600637995},
-  shorttitle = {“{{WHAT GETS MEASURED GETS DONE}}”},
-  timestamp = {2015-01-12T12:27:10Z},
-  langid = {english},
-  number = {2},
-  journaltitle = {Policy Studies},
-  author = {Wilson, Deborah and Croxson, Bronwyn and Atkinson, Adele},
-  urldate = {2015-01-12},
-  date = {2006-06},
-  pages = {153--171},
-  keywords = {Education Policy Option}
-}
-
-@unpublished{fong2015,
-  title = {Covariate {{Balancing Propensity Score}} for {{General Treatment Regimes}}},
-  url = {http://imai.princeton.edu/research/files/CBGPS.pdf},
-  timestamp = {2017-05-29T19:56:35Z},
-  author = {Fong, Christian and Hazlett, Chad and Imai, Kosuke},
-  date = {2015}
-}
-
-@article{odell2017,
-  title = {Lonely Schools: {{The}} Relationship between Geographic Isolation and Academic Attainment},
-  volume = {59},
-  issn = {1469-5847},
-  url = {http://www.tandfonline.com/doi/full/10.1080/00131881.2017.1339285},
-  doi = {10.1080/00131881.2017.1339285},
-  shorttitle = {Lonely Schools},
-  timestamp = {2017-08-03T13:42:54Z},
   number = {3},
-  journaltitle = {Educational Research},
-  shortjournal = {Educational Research},
-  author = {Odell, Evan},
-  date = {2017},
-  pages = {257--272},
-  keywords = {peerReview}
+  journaltitle = {Disability \& Society},
+  author = {Roulstone, Alan and Thomas, Pam and Balderston, Susie},
+  urldate = {2017-07-04},
+  date = {2011-05},
+  pages = {351--364},
+  groups = {hate-crime}
 }
 
-@report{departmentforeducation2017,
-  location = {{London}},
-  title = {Revised {{GCSE}} and Equivalent Results in {{England}}: 2015 to 2016},
-  url = {https://www.gov.uk/government/statistics/revised-gcse-and-equivalent-results-in-england-2015-to-2016},
-  timestamp = {2017-06-24T17:18:44Z},
-  number = {SFR 03/2017},
-  series = {Statistics: GCSEs (key stage 4)},
-  institution = {{Department for Education}},
-  type = {Statistical {{First Release}}},
-  author = {{Department for Education}},
-  date = {2017}
+@article{corcoran2016,
+  title = {Hate {{Crime}}, {{England}} and {{Wales}}},
+  volume = {5},
+  url = {https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/559319/hate-crime-1516-hosb1116.pdf},
+  timestamp = {2017-10-02T08:58:39Z},
+  journaltitle = {Statistical Bulletin},
+  author = {Corcoran, Hannah and Lader, Deborah and Smith, Kevin},
+  urldate = {2017-07-04},
+  date = {2016},
+  pages = {15},
+  groups = {hate-crime}
 }
 
+@article{crawley2017,
+  title = {Clinical and Cost-Effectiveness of the {{Lightning Process}} in Addition to Specialist Medical Care for Paediatric Chronic Fatigue Syndrome: Randomised Controlled Trial},
+  url = {http://adc.bmj.com/content/early/2017/09/21/archdischild-2017-313375.abstract},
+  doi = {10.1136/archdischild-2017-313375},
+  abstract = {Objective Investigate the effectiveness and cost-effectiveness of the Lightning Process (LP) in addition to specialist medical care (SMC) compared with SMC alone, for children with chronic fatigue syndrome (CFS)/myalgic encephalitis (ME).Design Pragmatic randomised controlled open trial. Participants were randomly assigned to SMC or SMC+LP. Randomisation was minimised by age and gender.Setting Specialist paediatric CFS/ME service.Patients 12–18 year olds with mild/moderate CFS/ME.Main outcome measures The primary outcome was the the 36-Item Short-Form Health Survey Physical Function Subscale (SF-36-PFS) at 6 months. Secondary outcomes included pain, anxiety, depression, school attendance and cost-effectiveness from a health service perspective at 3, 6 and 12 months.Results We recruited 100 participants, of whom 51 were randomised to SMC+LP. Data from 81 participants were analysed at 6 months. Physical function (SF-36-PFS) was better in those allocated SMC+LP (adjusted difference in means 12.5(95\% CI 4.5 to 20.5), p=0.003) and this improved further at 12 months (15.1 (5.8 to 24.4), p=0.002). At 6 months, fatigue and anxiety were reduced, and at 12 months, fatigue, anxiety, depression and school attendance had improved in the SMC+LP arm. Results were similar following multiple imputation. SMC+LP was probably more cost-effective in the multiple imputation dataset (difference in means in net monetary benefit at 12 months £1474(95\% CI £111 to £2836), p=0.034) but not for complete cases.Conclusion The LP is effective and is probably cost-effective when provided in addition to SMC for mild/moderately affected adolescents with CFS/ME.Trial registration number ISRCTN81456207.},
+  timestamp = {2017-10-02T08:54:20Z},
+  journaltitle = {Archives of Disease in Childhood},
+  shortjournal = {Arch Dis Child},
+  author = {Crawley, Esther M and Gaunt, Daisy M and Garfield, Kirsty and Hollingworth, William and Sterne, Jonathan A C and Beasant, Lucy and Collin, Simon M and Mills, Nicola and Montgomery, Alan A},
+  date = {2017-09-21}
+}
+
+@comment{jabref-meta: databaseType:biblatex;}
+@comment{jabref-meta: groupstree:
+0 AllEntriesGroup:;
+1 ExplicitGroup:hate-crime\;0\;;
+}
 
