--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -42,6 +42,22 @@
   date = {2017-09-21}
 }
 
+@article{montoya2017,
+  title = {Cytokine Signature Associated with Disease Severity in Chronic Fatigue Syndrome Patients},
+  volume = {114},
+  issn = {0027-8424, 1091-6490},
+  url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1710519114},
+  doi = {10.1073/pnas.1710519114},
+  timestamp = {2017-10-02T12:10:02Z},
+  langid = {english},
+  number = {34},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  author = {Montoya, Jose G. and Holmes, Tyson H. and Anderson, Jill N. and Maecker, Holden T. and Rosenberg-Hasson, Yael and Valencia, Ian J. and Chu, Lily and Younger, Jarred W. and Tato, Cristina M. and Davis, Mark M.},
+  urldate = {2017-10-02},
+  date = {2017-08-22},
+  pages = {E7150--E7158}
+}
+
 @comment{jabref-meta: databaseType:biblatex;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
