housing price post

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -58,6 +58,21 @@
   pages = {E7150--E7158}
 }
 
+@article{nagel1974,
+  title = {What {{Is It Like}} to {{Be}} a {{Bat}}?},
+  volume = {83},
+  issn = {00318108},
+  doi = {10.2307/2183914},
+  timestamp = {2017-10-09T09:24:23Z},
+  eprinttype = {jstor},
+  eprint = {2183914?origin=crossref},
+  number = {4},
+  journaltitle = {The Philosophical Review},
+  author = {Nagel, Thomas},
+  date = {1974-10},
+  pages = {435}
+}
+
 @comment{jabref-meta: databaseType:biblatex;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
