--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -73,6 +73,14 @@
   pages = {435}
 }
 
+@misc{fieldhouse2017,
+  title = {British {{Election Study Internet Panel Waves}} 1-13},
+  timestamp = {2017-11-07T15:36:27Z},
+  publisher = {{The University of Manchester}},
+  author = {Fieldhouse, Edward and Green, Jane and Evans, Geoffrey and Schmitt, Hermann and Eijk, Cees Van Der and Mellon, Jon and Prosser, Chris},
+  date = {2017}
+}
+
 @comment{jabref-meta: databaseType:biblatex;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
