disability voting blogpost

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -73,10 +73,11 @@
   pages = {435}
 }
 
-@misc{fieldhouse2017,
-  timestamp = {2017-11-07T15:36:27Z},
+@article{fieldhouse2017,
+  timestamp = {2017-11-15T13:32:22Z},
   title = {British {{Election Study Internet Panel Waves}} 1-13},
-  publisher = {{The University of Manchester}},
+  url = {http://www.britishelectionstudy.com/data-object/british-election-study-combined-wave-1-13-internet-panel/},
+  doi = {10.15127/1.293723},
   author = {Fieldhouse, Edward and Green, Jane and Evans, Geoffrey and Schmitt, Hermann and Eijk, Cees Van Der and Mellon, Jon and Prosser, Chris},
   date = {2017}
 }
@@ -86,3 +87,4 @@
 0 AllEntriesGroup:;
 ;
 }
+
